--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
-title: Ming Min
-author: Ming Min
-email: m_min@pstat.ucsb.edu
-description: Ph.D. Student @ UCSB | Financial Mathematics | Statistics & Applied Probability
+title: Yichen Feng
+author: Yichen Feng
+email: yfeng01@ucsb.edu
+description: Ph.D. Candidate @ UCSB | Financial Mathematics | Statistics & Applied Probability
 
 # social links
 # twitter_username: jekyllrb
-github_username: mmin0
+github_username: yfeng01
 # rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
 # instagram_username: jekyll
-linkedin_username: ming-min-b05159127
+#linkedin_username: ming-min-b05159127
 # pinterest_username: jekyll
 # youtube_username: jekyll
 # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
